--- a/style/style.css
+++ b/style/style.css
@@ -108,7 +108,7 @@
     }
 
     ol li, ul li {
-        text-align: left !important;
+        text-align: left;
     }
 
     figure, img {
@@ -1004,19 +1004,24 @@
         display: inline-block;
         width: 100%;
         height: auto;
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
+        background-color: #E5E4E4;
+        border-radius: 2px;
+    }
+
+    .main-post p > img {
+        width: 100;
+        height: auto;
+        margin-top: 10px !important;
+        margin-bottom: 5px !important;
+        padding: 0 !important;
         background-color: #E5E4E4;
         border-radius: 2px;
     }
 
     .main-post img {
-        width: 100;
-        height: auto;
-        background-color: #E5E4E4;
-        border-radius: 2px;
-    }
-
-    .main-post p img {
-        padding: 0 !important;
+        margin: 15px 0 15px 0;
     }
 
     .main-post figure > figcaption {
@@ -1543,6 +1548,7 @@
     }
 
     .footer-menu-left ul li {
+        text-align: center !important;
         font-size: 15px;
         font-weight: bold;
         color: #121212;
@@ -1642,11 +1648,11 @@
     /* header style  */
 
     .header-in .header-container {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
     }
 
     .header-bottom .header-container {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
     }
 
     .header-in .costum-main-menu {
@@ -1666,7 +1672,7 @@
     }
 
     header .main-container {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
     }
 
 
@@ -1701,7 +1707,7 @@
     /* footer style  */
 
     footer .main-container {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
     }
 
     /* footer style  */
@@ -1718,7 +1724,7 @@
         background-image: url("img/menu-icon.svg");
         background-size: 25px auto;
         padding: unset !important;
-        margin-left: -15px;
+        margin-left: -18px;
         background-position-y: center;
         background-position-x: 15px;
         box-sizing: border-box;
@@ -1745,7 +1751,7 @@
 
     /* main style  */
     main .main-container {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
     }
 
     .recent-posts-main .recent-post-index {
@@ -2065,10 +2071,10 @@
 
     .is_mega_medium, .is_mega {
         display: block !important;
-        width: calc(100% + 30px) !important;
+        width: calc(100% + 36px) !important;
         height: auto;
-        margin-left: -15px !important;
-        margin-right: -15px !important;
+        margin-left: -18px !important;
+        margin-right: -18px !important;
         padding-left: 0;
         padding-right: 0;
         border-radius: unset !important;
