--- a/style/style.css
+++ b/style/style.css
@@ -116,6 +116,10 @@
         height: auto;
     }
 
+    ul li a strong, ul li a b {
+        font-weight: normal;
+    }
+
     span {
         font-size: 16px;
     }
@@ -1038,7 +1042,7 @@
     .main-post ol {
         margin: 10px 0 10px 0;
         padding-left: 40px;
-        padding-right: 20px;
+        padding-right: unset;
         list-style-type: decimal;
         color: #1a1a1a;
     }
@@ -1046,7 +1050,7 @@
     .main-post ul {
         margin: 10px 0 10px 0;
         padding-left: 40px;
-        padding-right: 20px;
+        padding-right: unset;
         list-style-type: disc;
         color: #1a1a1a;
     }
@@ -2219,7 +2223,7 @@
     }
 
     .main-post ul, .main-post ol {
-        padding-right: 14px !important;
+        padding-right: unset !important;
     }
 
     /* table  */
