--- a/style/style.css
+++ b/style/style.css
@@ -1492,8 +1492,12 @@
         list-style: none;
     }
 
+    .recent-post-title h1 {
+        padding-right: 30px;
+        font-size: 36px !important;
+    }
 
-    .header-post-title h1 a {
+    .recent-post-title h1 a {
         color: #131313;
     }
 
@@ -1708,6 +1712,14 @@
 
     /* post  */
 
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 32px !important;
+    }
+
+    /* recent post  */
+
     /* main style  */
 
     /* footer style  */
@@ -1790,7 +1802,16 @@
         padding-right: 10px;
     }
 
+
     /* post  */
+
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 28px !important;
+    }
+
+    /* recent post */
 
     /* main style  */
 
@@ -2171,6 +2192,15 @@
 
     /* related post  */
 
+
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 26px !important;
+    }
+
+    /* recent post  */
+
     /* main style  */
 
     /* footer style  */
@@ -2291,6 +2321,13 @@
     }
     /* recent post  */
 
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 23px !important;
+    }
+
+    /* recent post  */
 
     /* main style  */
 
@@ -2364,6 +2401,17 @@
     }
 
     /* table  */
+
+    
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 21px !important;
+    }
+
+    /* recent post  */
+
+
 }
 
 
@@ -2394,6 +2442,17 @@
 
     /* post  */
 
+    /* recent post  */
+
+    .recent-post-title h1 {
+        font-size: 19px !important;
+    }
+
+    .header-post-link {
+        display: none !important;
+    }
+
+    /* recent post  */
 
 
 }
