--- a/style/style.css
+++ b/style/style.css
@@ -526,8 +526,12 @@
         width: 100%;
         min-height: 100%;
         height: 100%;
-        margin-top: 10px;
+        margin-top: 30px;
         /* background-color: green; */
+    }
+
+    .single-page-main {
+        margin-top: 10px !important;
     }
 
     .recent-posts-main .recent-post-index {
@@ -1954,7 +1958,7 @@
     }
 
     .recent-posts-main {
-        margin-top: 20px;
+        margin-top: 20px !important;
     }
 
     .recent-post-index {
