--- a/style/style.css
+++ b/style/style.css
@@ -87,6 +87,26 @@
         text-align: left !important;
     }
 
+    h1 {
+        font-size: 26px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 22px;
+    }
+
+    h4 {
+        font-size: 20px;
+    }
+
+    h5 {
+        font-size: 18px;
+    }
+
     p {
         text-align: left !important;
         font-size: 16px;
@@ -110,6 +130,10 @@
     em, i {
         font-style: italic;
         color: #1a1a1a;
+    }
+
+    table {
+        font-size: 14px;
     }
 
     ol, ul {
@@ -990,6 +1014,10 @@
         font-style: italic;
     }
 
+    .sumber_ref li {
+        font-size: 14px;
+    }
+
     .main-post h2, .main-post h3, .main-post h4, .main-post h5 {
         font-weight: bold;
         padding-right: 25px;
@@ -1039,6 +1067,14 @@
         border-radius: 2px;
     }
 
+    .main-post .is_mega_mobile {
+        display: block;
+        width: 65%;
+        height: auto;
+        margin-right: 0;
+        margin-left: 15%;
+    }
+
     .main-post p > img {
         width: 100;
         height: auto;
@@ -1063,6 +1099,24 @@
         padding-right: 30px;
         color: #585858;
     }
+
+    /* CLASSIC CONDITION */
+    .main-post .wp-caption {
+        width: 100%;
+        height: auto;
+    }
+
+    /* caption only for classic editor  */
+    .entry_article_utama .wp-caption-text {
+        text-align: left !important;
+        font-weight: normal;
+        font-size: smaller;
+        font-style: normal;
+        box-sizing: border-box;
+        color: #585858;
+    }
+    /* caption only for classic editor  */
+
 
     .main-post ol {
         margin: 10px 0 10px 0;
@@ -1179,6 +1233,7 @@
     }
 
     .main-post table tr td ul li {
+        font-size: 14px;
         line-height: 2;
     }
 
@@ -1197,6 +1252,10 @@
 
     /* yoast  */
 
+    /* For AppBox  */
+    div.wpappbox {
+        box-shadow: none !important;
+    }
 
     .main-post .tags {
         font-weight: bold;
@@ -2128,13 +2187,17 @@
         letter-spacing: 0.5px;
     }
 
+    .sumber_ref li {
+        font-size: 11px !important;
+    }
+
     .main-post figure > figcaption {
         padding-right: 10px;
         font-size: 10px !important;
         line-height: 1.4 !important;
     }
 
-    .is_mega_medium, .is_mega {
+    .is_mega_medium, .is_mega, .is_mega_mobile {
         display: block !important;
         width: calc(100% + 36px) !important;
         height: auto;
@@ -2145,11 +2208,11 @@
         border-radius: unset !important;
     }
 
-    .is_mega_medium img, .is_mega img {
+    .is_mega_medium img, .is_mega img, .is_mega_mobile img {
         border-radius: unset !important;
     }
 
-    .is_mega_medium figcaption, .is_mega figcaption {
+    .is_mega_medium figcaption, .is_mega figcaption, .is_mega_mobile figcaption {
         margin-left: 18px !important;
         margin-right: 18px !important;
     }
@@ -2171,6 +2234,10 @@
     .main-post table tr td ul {
         padding-left: 20px;
         margin-top: 5px;
+    }
+
+    .main-post table tr td ul li {
+        font-size: 13px;
     }
 
     /* table  */
